--- a/about.html
+++ b/about.html
@@ -3,9 +3,9 @@
 <head>
   <meta name="viewport" content="width=device-width">
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>About</title>
+  <title>О проекте</title>
   <link rel="stylesheet" href="stylesheets/style.css">
   <link rel="stylesheet" href="stylesheets/about.css">
   <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
