--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="stylesheets/style.css">
     <meta name="viewport" content="width=device-width">
     <meta property="og:type" content="article">
-    <meta property="og:url" content="{page_url}">
-    <meta property="og:title" content="{title}">
-    <meta property="og:description" content="{description}">
-    <meta property="og:image" content="{image_url}">
+    <meta property="og:url" content="https://vianhtuyet.github.io/wikimedium/">
+    <meta property="og:title" content="Викимедиум">
+    <meta property="og:description" content="Учебный проект для вёрстки сайта с использованием HTML/CSS">
+    <meta property="og:image" content="https://vianhtuyet.github.io/wikimedium/images/narkomfin%201.jpg">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <title>Главная</title>
   </head>
