--- a/about.html
+++ b/about.html
@@ -30,8 +30,8 @@
       <img src="images/about2.png" alt="">
     </div>
     <div class="">
-      <h1>С нуля до первого сайта<br> под компьютеры, <br>смартфоны<br> и планшеты</h1>
-      <p>Чтобы начать изучать веб-вёрстку на этом проекте, <br>не требуется каких-то специальных знаний,кроме базового умения пользоваться компьютером</p>
+      <h1>С нуля до первого сайта<br> под компьютеры, смартфоны<br> и планшеты</h1>
+      <p>Чтобы начать изучать веб-вёрстку на этом проекте, <br>не требуется каких-то специальных знаний, кроме базового умения пользоваться компьютером</p>
     </div>
   </section>
   <section class="one">
@@ -39,13 +39,13 @@
       <h1>Реальный проект, реальный рабочий процесс</h1>
       <p>Обучение приближено к работе в реальной жизни, работа разбита на этапы от типографики, создания меню и использования эффектов, до адаптации под мобильные устройства и использования JavaScript скриптов</p>
     </div>
-    <div class="">
+    <div class="about3">
       <img src="images/about3.png" alt="">
     </div>
   </section>
   <section class="bottom_block">
-    <h1>Возможность самостоятельного и курируемого обучения</h1>
-    <p>Вы можете обучаться самостоятельно по исходному коду проекта, выложенному на GitHub, или записаться на курс «Основы веб-вёрстки» в Школе Дизайна НИУ ВШЭ</p>
+    <h1>Возможность самостоятельного и&nbsp;курируемого обучения</h1>
+    <p>Вы можете обучаться самостоятельно по исходному коду проекта, выложенному на GitHub, или записаться на курс «Основы <br>веб-вёрстки» в Школе Дизайна НИУ ВШЭ</p>
     <a class="btn1" href="#">Исходный код на GitHub</a>
     <a class="btn2" href="https://design.hse.ru/">Курс в Школе Дизайна</a>
   </section>
