--- a/narkomfin.html
+++ b/narkomfin.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
   <html lang="en" dir="ltr">
   <head>
-    <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width">
+    <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <title>Дом Наркомфина</title>
     <link rel="stylesheet" href="stylesheets/style.css">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
