--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
     <meta property="og:url" content="https://vianhtuyet.github.io/wikimedium/">
     <meta property="og:title" content="Викимедиум">
     <meta property="og:description" content="Учебный проект для вёрстки сайта с использованием HTML/CSS">
-    <meta property="og:image" content="https://vianhtuyet.github.io/wikimedium/images/narkomfin%201.jpg">
+    <!-- <meta property="og:image" content="https://vianhtuyet.github.io/wikimedium/images/narkomfin%201.jpg"> -->
+    <meta property="og:image" content="https://vianhtuyet.github.io/wikimedium/images/logo.svg">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <title>Главная</title>
   </head>
