--- a/narkomfin.html
+++ b/narkomfin.html
@@ -2,7 +2,8 @@
   <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <!-- <meta name="viewport" content="width=device-width"> -->
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <title>Дом Наркомфина</title>
     <link rel="stylesheet" href="stylesheets/style.css">
