--- a/origami.html
+++ b/origami.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Оригами</title>
     <link rel="stylesheet" href="stylesheets/style.css">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://vianhtuyet.github.io/wikimedium/origami.html">
+    <meta property="og:title" content="Оригами">
+    <meta property="og:description" content="Орига́ми (яп. 折り紙, букв.: «сложенная бумага») — вид декоративно-прикладного искусства; японское искусство складывания фигурок из бумаги.">
+    <meta property="og:image" content="https://vianhtuyet.github.io/wikimedium/images/origami.jpg">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <script src="javascripts/jquery-3.6.0.js" charset="utf-8"></script>
     <script type="text/javascript">
