--- a/narkomfin.html
+++ b/narkomfin.html
@@ -7,6 +7,11 @@
     <!-- <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <title>Дом Наркомфина</title>
     <link rel="stylesheet" href="stylesheets/style.css">
+    <meta property="og:type" content="article">
+    <meta property="og:url" content="https://vianhtuyet.github.io/wikimedium/narkomfin.html">
+    <meta property="og:title" content="Дом Наркомфина">
+    <meta property="og:description" content="Дом Наркомфина — один из знаковых памятников архитектуры советского авангарда и конструктивизма. Построен в 1928—1930 годах по проекту архитекторов Моисея Гинзбурга, Игнатия Милиниса и инженера Сергея Прохорова для работников Народного комиссариата финансов СССР (Наркомфина). Автор замысла дома Наркомфина М.Я. Гинзбург определял его как «опытный дом переходного типа». Находится в Москве по адресу: Новинский бульвар, дом 25, корпус 1.">
+    <meta property="og:image" content="https://vianhtuyet.github.io/wikimedium/images/narkomfin%201.jpg">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <link rel="icon" type="image/png" href="images/favicon.png" />
     <script src="javascripts/jquery-3.6.0.js" charset="utf-8"></script>
