--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta property="og:title" content="Викимедиум">
     <meta property="og:description" content="Учебный проект для вёрстки сайта с использованием HTML/CSS">
     <!-- <meta property="og:image" content="https://vianhtuyet.github.io/wikimedium/images/narkomfin%201.jpg"> -->
-    <meta property="og:image" content="https://vianhtuyet.github.io/wikimedium/images/logo.svg">
+    <meta property="og:image" content="https://vianhtuyet.github.io/wikimedium/images/narkomfin%201.jpg">
     <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
     <title>Главная</title>
   </head>
