--- a/origami.html
+++ b/origami.html
@@ -27,6 +27,11 @@
     	});
     });
     </script>
+    <style media="screen">
+      body {
+        background: white;
+      }
+    </style>
   </head>
   <body>
     <div class="menubar">
