--- a/narkomfin.html
+++ b/narkomfin.html
@@ -29,6 +29,11 @@
     	});
     });
     </script>
+    <style media="screen">
+      body {
+        background: white;
+      }
+    </style>
   </head>
     <body>
       <div class="menubar">
